--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Namaste React</title>
     <link rel="stylesheet" href="./index.css" />
-    <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+
+    <script type="module" src="./App.js"></script>
+  </body>
 </html>
